--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,1 +1,7 @@
 @use 'tailwindcss';
+
+.header {
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1),
+                0 2px 2px rgba(0, 0, 0, 0.06),
+                0 0 2px rgba(0, 0, 0, 0.07);
+}
