--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,3 +5,9 @@
                 0 2px 2px rgba(0, 0, 0, 0.06),
                 0 0 2px rgba(0, 0, 0, 0.07);
 }
+
+.footer {
+    box-shadow: 0 -1px 3px rgba(0,0,0,.1), 
+                0 -2px 2px rgba(0,0,0,.06), 
+                0 0 2px rgba(0,0,0,.07);
+}
