--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,3 +11,9 @@
                 0 -2px 2px rgba(0,0,0,.06), 
                 0 0 2px rgba(0,0,0,.07);
 }
+
+.sign-in {
+    box-shadow: 0 2px 4px rgba(0,0,0,.07), 
+                0 4px 5px rgba(0,0,0,.06), 
+                0 1px 10px rgba(0,0,0,.1);
+}
